nginx-ingress-subpath/test-stack/sextant/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sextant
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: localhost:5000/sextant-api:local
        ports:
        - containerPort: 80
