nginx-ingress-subpath/test-stack/sextant/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sextant
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: localhost:5000/sextant:local
        ports:
        - containerPort: 80
