nginx-ingress-subpath/test-stack/sextant/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sextant
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:9.6.1
        ports:
        - containerPort: 5432
