nginx-ingress-subpath/test-stack/sextant/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: sextant
  name: api
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: api
