nginx-ingress-subpath/test-stack/sextant/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: sextant
  name: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: frontend
