nginx-ingress-subpath/test-stack/sextant/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: sextant
  name: postgres
spec:
  type: ClusterIP
  ports:
  - port: 5432
    protocol: TCP
  selector:
    app: postgres
