nginx-ingress-subpath/test-stack/sextant/ingress-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sextant
  name: ingress-root
spec:
  rules:
  - http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
